# WhatDo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  jq  pylint-check.sh  pyproject.toml  setup.cfg  whatdo
data/: steam.json
include/WhatDo/: cli.hpp  util.hpp
src/: cli.cpp  main.cpp  util.cpp  whatdo.py
src/steam/: steam.py
src/whatdo/: custom.py  interface.py  main.py  state.py  steam.py  template.py  util.py
