[metadata]
name = What Do
author = PatrickDaG
author_email = patrickdgro@gmail.com
description = A tool to randomly decide what to game
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/PatrickDaG/whatdo
project_urls =
    Documentation = https://example.com/TODO
    Source = https://github.com/Patrickdgro/whatdo
    Issues = https://github.com/Patrickdgro/whatdo/issues
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: Gaming
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Utilities
keywords = gaming

[options]
zip_safe = False
python_requires = >=3.9
install_requires =
	jinja2
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    autokernel = whatdo.main:main
